# sol-gate

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  test.db  test.db-shm  test.db-wal
frontend/: package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.js  FSNebula.js  style.css
frontend/src/lib/: Footer.svelte  ModTile.svelte  Navbar.svelte
frontend/src/routes/: +layout.js  +layout.svelte
frontend/src/routes/explore/: +page.svelte
frontend/src/routes/fsn/: +page.svelte
migrations/: 20221128231951_init.sql
src/: api.rs  cli.rs  common.rs  config.rs  db.rs  files.rs  fsnebula.rs  main.rs  router.rs
src/common/: db.rs  router.rs
src/common/migrate/: 0001_localinit.sql
src/config/: api.rs
src/db/: queries.rs
src/files/: api.rs  compression.rs  dag.rs  hash.rs  indexer.rs  readers.rs  sevenz.rs  solver.rs  util.rs
src/fsnebula/: api.rs  db.rs  mods.rs  router.rs  structs.rs
src/fsnebula/migrations/: 0001_fsninit.sql
src/fsnebula/queries/update/: links.sql  mod_flags.sql  mods.sql  packages.sql  stab.sql  zipfiles.sql
src/mods/: api.rs
vp/: Cargo.toml
vp/src/: bin.rs  compression.rs  fs.rs  lib.rs  parser.rs  types.rs
vp/test_files/: credits.md  mv_radaricons.vp  radar-asteroid.dds  vpread.hexproj
