[package]
name = "sol-gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
platform-dirs = "0.3"
clap = { version = "3.0", features = ["derive"] }
sha2 = "~0.10.0"
hex = {version = "0.4", features=["serde"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "offline", "migrate", "sqlite", "chrono"] } 
include_dir = "0.7"
reqwest= "0.11"
axum = "0.6"
mime_guess = "2.0"
tower = {version = "0.4"}
tower-http = {version = "0.3", features = ["add-extension", "auth", "compression-gzip", "trace"]}
open = "3.0"
console-subscriber = "0.1"
hash_hasher = "2.0.3"
vp = {path = "vp"}
sevenz-rust = {path = "sevenz-rust"}
axum-macros = "0.3"
chrono={version="0.4", features=["serde"]}
async-channel = {version = "~1.7.1"}
num_cpus = {version="~1.13.1"}




[profile.dev.package.sqlx-macros]
opt-level = 3 # Speed up sqlx checks.